--- a/views/category/edit.ejs
+++ b/views/category/edit.ejs
@@ -3,17 +3,37 @@
   <div class="album py-5 bg-body-tertiary">
   <div class="container">
 
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+
+<div>Category Name: <%= category.Item_name %></div>
 <h1>Edit Category</h1>
 <form method="POST" action="/category/update">
   <div>
     <label>Category Name</label>
-    <input name="category_name" type="text" class="form-control" value="<%= category.category_name %>">
+    <input id="category_name" name="category_name" type="text" class="form-control" value="<%= category.category_name %>">
   </div>
   <br>
+  <div>
+    <label>Color</label>
+    <input id="color" name="color" type="color" class="form-control" value="<%= category.color %>">
+  </div>
+  <br />
+  <div class="form-check pb-3">
+    <img src="<%= category.item_img %>" height="100px">
+    <div>
+    <label for="item_img" class="form-label">Photo (.jpg or .png - max. 512KB)</label>
+    <input class="form-control" onchange="validateSize(this)" type="file" name="item_img" id="item_img" accept=".png, .jpg, .jpeg, .gif" required>
+    </div>  
+   </div>
+   <br />
   <input type="hidden" name="id" value="<%= category._id%>">
   <button type="submit" class="btn btn-primary">Update Category</button>
 </form>
   </div>
+</div>
+
+</div>
 </div>
 
 </main>
