--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 <link href="../../css/style.css" rel="stylesheet">
 
+<!-- <% //if(waiting){ %><meta http-equiv="refresh" content="30"><% //} %> -->
+
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
