--- a/views/userAuctions/edit.ejs
+++ b/views/userAuctions/edit.ejs
@@ -45,7 +45,7 @@
 <div class="col-lg-4 col-md-6 col-sm-12">
   <label for="description" class="form-label">Description</label>
   <div class="form-floating pb-3">
-    <textarea id="description" name="description" class="form-control" height="100px" required></textarea>
+    <textarea id="description" name="description" class="form-control" height="100px" required><%= auction.description %></textarea>
   </div>
 </div>
 
