--- a/views/auction/detail.ejs
+++ b/views/auction/detail.ejs
@@ -2,26 +2,36 @@
   <div class="album py-5 bg-body-tertiary">
     <div class="container">
       <div class="row">
+
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card mb-3">
             <img src="<%= auction.item_img %>" class="card-img-top" alt="Item Image">
             <div class="card-body">
-              <h5 class="card-title">Picture of the Item</h5>
+              <h5 class="card-title">Auctioneer: <%= auction.user.name %></h5>
             </div>
           </div>
         </div>
+
         <div class="col-lg-8 col-md-6 col-sm-12">
           <div class="card mb-3">
             <div class="card-body">
               <h3 class="card-title">Item: <%= auction.name %></h3>
               <p class="card-text">Minimum Price: <%= auction.min_price %></p>
               <p class="card-text">Description: <%= auction.description %></p>
-              <p class="card-text">End Date: <%= dayjs.utc(auction.end_date).format('YYYY-MM-DD') %></p>
+              <p class="card-text">End Date: <%= dayjs.utc(auction.end_date).format('YYYY-MM-DD HH:mm') %></p>
               <p class="card-text">Item Status: <%= auction.status %></p>
             </div>
           </div>
         </div>
+
       </div>
+      <br /><br />
+      <div class="row">
+      <h4>List of Bids on this Auction</h4>
+
+      </div>
+
     </div>
   </div>
+
 </main>
