--- a/views/bid/index.ejs
+++ b/views/bid/index.ejs
@@ -17,9 +17,9 @@
     <thead>
         <tr>
             <th scope="col">Bid No.</th>
+            <th scope="col">Bidder</th>
             <th scope="col">Auctioned Item</th>
             <th scope="col">Bid Amount</th>
-            <th scope="col">Note</th>
             <th scope="col">Created</th>
             <th scope="col">Updated</th>
             <th scope="col">Action(s)</th>
@@ -29,13 +29,18 @@
     <% bids.forEach(function (bid, index) { %>
             <tr>
             <td><%= index+1 %>. </td>
-            <td><a href="/bid/detail/?id=<%= bid._id %>"><%= //bid.auction.name %></a></td>
+            <td><%= bid.user.name %></td>
+            <td><a href="/bid/detail/?id=<%= bid._id %>"><%= bid.auction.name %></a></td>
             <td><%= bid.amount %></td>
-            <td><%= bid.note %></td>
             <td><%= dayjs.utc(bid.createdAt).format('DD/MM/YYYY') %></td>
             <td>Updated <%= dayjs.utc(bid.updatedAt).fromNow(true) %> ago</td>
             <td>
-            <a class="btn btn-sm btn-warning" href="/bid/edit?id=<%= bid._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
+            <% if(bid.user._id.equals(user._id)){ %>
+                <a class="btn btn-sm btn-warning" href="/bid/edit?id=<%= bid._id %>"><i class="bi-pencil-fill"></i></a>
+            <% }else{ %>
+                <a class="btn btn-sm btn-secondary disabled" role="button" aria-disabled="true"><i class="bi-pencil-fill"></i></a>
+            <% } %>
+             <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
                 <i class="bi-trash3-fill"></i></button>
     
     <div class="modal fade" id="D<%= index+1 %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= index+1 %>" aria-hidden="true">
