--- a/views/category/detail.ejs
+++ b/views/category/detail.ejs
@@ -1,7 +1,9 @@
 <div>
     <div>
       <h3><%= category.category_name %></h3>
-      <div>Item Name: <%= category.Item_name %></div>
+      <div>Category Name: <%= category.Item_name %></div>
+
+      <div>Category Color: <%= category.color %></div>
     
     </div>
     <br>
