--- a/views/category/index.ejs
+++ b/views/category/index.ejs
@@ -17,6 +17,7 @@
     <tr>
       <th>ID</th>
       <th>Category Name</th>
+      <th>Color</th>
       <th scope="col">Created</th>
         <th scope="col">Updated</th>
       <th>Action(s)</th>
@@ -25,6 +26,7 @@
     <tr>
       <td><%= index+1 %></td>
       <td><%= cat.category_name %></td>
+      <td><span style="color:<%= cat.color %>"><%= cat.color %></span></td>
       <td><%= dayjs.utc(cat.createdAt).format('DD/MM/YYYY') %></td>
       <td>Updated <%= dayjs.utc(cat.updatedAt).fromNow(true) %> ago</td>
       <td>
