--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,7 +6,7 @@
             <h1>Welcome to your profile</h1>
       
             <div class="row">
-              <form method="POST" enctype="multipart/form-data" action="/user/updateUser" autocomplete="off">
+              <form method="POST" action="/user/updateUser" autocomplete="off" enctype="multipart/form-data">
                 <div class="col-lg-4 col-md-6 col-sm-12">
                   <div class="form-check pb-3">
                     <img src="<%= user.avatar %>" referrerpolicy="no-referrer" height="100px"></img>            
