--- a/views/category/edit.ejs
+++ b/views/category/edit.ejs
@@ -6,9 +6,9 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12">
 
-<div>Category Name: <%= category.Item_name %></div>
 <h1>Edit Category</h1>
-<form method="POST" action="/category/update">
+
+<form method="POST" action="/category/update" enctype="multipart/form-data">
   <div>
     <label>Category Name</label>
     <input id="category_name" name="category_name" type="text" class="form-control" value="<%= category.category_name %>">
