add new logo & fixes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-            <span class="fs-2">Auction App </span>
+            <span class="fs-2"><img src="../images/auction-logo.png" height="80px"></span>
         </a>
         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
            
