--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,7 +154,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">Logo</h3>
+      <h3 class="float-md-start mb-0"><img src="../images/auction-logo.png" height="80px"></h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/main">Market</a>
         <!-- <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a> -->
