--- a/views/home/requireCategory.ejs
+++ b/views/home/requireCategory.ejs
@@ -14,7 +14,7 @@
     
     <div class="row" data-masonry='{"percentPosition": true }'>
     
-    <% auctions.forEach(function (auction, index) { if(auction.status){ %>
+    <% let todaysDate = dayjs(new Date()); auctions.forEach(function (auction, index) { if(auction.status){ if(auction.end_date > todaysDate) { %>
     <div class="col-sm-6 col-lg-3 mb-4">
     <div class="card">
         <img src="<%= auction.item_img %>">
@@ -51,7 +51,7 @@
     </div>
     </div>
     
-    <% } }) %>
+    <% } } }) %>
     
     <!-- <div class="col-sm-6 col-lg-4 mb-4">
     <div class="card">
