--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <!-- <p class="float-end mb-1">
     <a class="btn btn-sm bg-primary text-white" href="#top"><i class="bi bi-arrow-up-square-fill"></i></a>
     </p> -->
-    <p class="mb-1">&copy; 2023 | Auction App </p>
+    <p class="mb-1">&copy; 2023 | The Auctioneers </p>
 </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
