--- a/views/home/requireCategory.ejs
+++ b/views/home/requireCategory.ejs
@@ -1,7 +1,5 @@
 <main class="container py-5">
-    <h1><%= title %>
-   
-
+    <h1><%= title %></h1>
     
     <nav class="navbar bg-body-tertiary mb-3">
         <div class="container-fluid">
@@ -20,7 +18,7 @@
         <img src="<%= auction.item_img %>">
         
         <div class="card-body">
-        <h5 class="card-title"><%= auction.name %></h5> 
+        <h6 class="card-title"><%= auction.name %></h6>
         
         <p class="card-text pt-3"><small><%= auction.description %></small></p>
         
