--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 <link href="../../css/style.css" rel="stylesheet">
 
-<!-- <% //if(waiting){ %><meta http-equiv="refresh" content="30"><% //} %> -->
+<!-- <meta http-equiv="refresh" content="60"> -->
 
 </head>
 <body>
@@ -77,7 +77,7 @@
            
             <li>
                 <a href="/main" class="nav-link text-white">
-                    <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
+                    <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-bag-heart"></i></div>
                     Market 
                 </a>
             </li>
@@ -97,7 +97,7 @@
 
                     <li>
                         <a href="/userAuctions/index" class="nav-link text-white">
-                            <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
+                            <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-bell-fill"></i></div>
                             My Auctions 
                         </a>
                     </li>
@@ -114,7 +114,7 @@
 
                         <li>
                             <a href="/category/index" class="nav-link text-white">
-                                <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
+                                <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-card-checklist"></i></div>
                                 Categories 
                             </a>
                         </li>
@@ -128,7 +128,7 @@
                         
                         <li>
                             <a href="/user/index" class="nav-link text-white">
-                                <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
+                                <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-person-bounding-box"></i></div>
                                 Users 
                             </a>
                         </li>
