--- a/views/home/main.ejs
+++ b/views/home/main.ejs
@@ -11,7 +11,7 @@
               <input type="hidden" name="id" id="id" value="<%= category._id %>">
               <div style="text-align: center;">
                 <button type="submit" style="text-decoration: none !important; text-align: center;" class="btn btn-link p-30">
-                  <h5 style="text-decoration: none; color: black; text-align: center;" class="card-title category-link mb-0" data-category="<%= category.category_name %>"><%= category.category_name %></h5>
+                  <h5 style="text-align: center;" class="card-title category-link mb-0" data-category="<%= category.category_name %>"><%= category.category_name %></h5>
                 </button>
               </div>
             </form>
