--- a/views/auction/add.ejs
+++ b/views/auction/add.ejs
@@ -31,7 +31,7 @@
 
   <div class="form-check pb-3">
     <label for="min_price" class="form-label">Starting Price [<span class="text-warning"><%= currency %></span>]</label>
-    <input id="min_price" name="min_price" type="number" min="1" max="9999" step="1" class="form-control" required>
+    <input id="min_price" name="min_price" type="number" min="1" step="1" class="form-control" required>
   </div>
 
   <div class="form-check pb-3">
