Fixed Time UTC to Local in Views
Add, Edit and Details Time value from UTC to local on views for Admin and Auctioneer views

--- a/views/userAuctions/edit.ejs
+++ b/views/userAuctions/edit.ejs
@@ -25,7 +25,7 @@
   </div>
 
   <div class="form-check pb-3">
-    <label for="min_price" class="form-label">Starting Price [<span class="text-warning">Currency</span>]</label>
+    <label for="min_price" class="form-label">Starting Price [<span class="text-warning"><%= currency %></span>]</label>
     <input id="min_price" name="min_price" value="<%= auction.min_price %>" class="form-control" disabled>
   </div>
 
