--- a/views/userAuctions/index.ejs
+++ b/views/userAuctions/index.ejs
@@ -19,9 +19,9 @@
     <th>Auctioned Item</th>
     <th>Category</th>
     <th>Min. Price to Highest Bid</th>
-    <th>Start Date</th>
+    <!--<th>Start Date</th>-->
     <th>End Date</th>
-    <th>Created / Updated</th>
+    <th>Created / Updated (UTC)</th>
     <th>Action(s)</th>
   </tr>
 
@@ -31,9 +31,9 @@
     <td><%= index+1 %></td>
     <td><a href="/userAuctions/detail?id=<%= auction._id %>"><%= auction.name %></a></td>
     <td><%= auction.category.category_name %></td>
-    <td><small><kbd class="btn btn-sm btn-primary"><%= auction.min_price %></kbd> to <kbd class="btn btn-sm btn-success"><%= auction.highest_bid %></kbd></small></td>
-    <td><%= dayjs.utc(auction.start_date).format('DD/MM/YYYY') %></td>
-    <td><%= dayjs.utc(auction.end_date).format('DD/MM/YYYY HH:mm') %></td>
+    <td><small><kbd class="bg-primary"><%= currency %> <%= auction.min_price %></kbd> to <kbd class="bg-success"><%= currency %> <%= auction.highest_bid %></kbd></small></td>
+    <!--<td><%= //dayjs.utc(auction.start_date).format('DD/MM/YYYY') %></td>-->
+    <td><%= dayjs(auction.end_date).format('YYYY-MM-DD HH:mm') %></td>
     <td><small><kbd>Created: <%= dayjs.utc(auction.createdAt).format('DD/MM/YYYY') %></kbd> <kbd>Updated <%= dayjs.utc(auction.updatedAt).fromNow(true) %> ago</kbd></small></td>
     <td><a class="btn btn-sm btn-warning <%= noEdit %>" href="/userAuctions/edit?id=<%= auction._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>" <%= noEdit %>>
       <i class="bi-trash3-fill"></i></button>
